# Sushi

./: Talent recruitment.html  index.html  pyproject.toml
component/backToTop/: backToTop.js
component/footer/: footer.css  restaurantFooter.js
component/footer/card/: card.css  card.js
component/footer/formCard/: form.css  formCard.js
component/header/: header.css  restaurantHeaderNav.js
component/nav/: nav.css  restaurantNav.js
component/navHome/: nav.css  restaurantNavHome.js
reptile/: export_json.py
static/CSS/: about.css  back_to_top.css  base.css  footer.css  header.css  index.css  indexbody.css  menu.css  reservation.css  talent_recruitment.css
static/data/: menu.json
static/javaScript/: backToTop.js  index.js  menu.js  reservation.js  talent_recruitment.js
template/: Talent recruitment.html  about.html  index.html  menu.html  reservation.html  success.html  talent_recruitment.html
