[tool.poetry]
name = "sushi"
version = "0.1.0"
description = ""
authors = ["Hung-Cheng-Xi <11146062@ntub.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
isort = "^5.13.2"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
